k8s/postgrest/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: cmp-dev
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: postgrest
